@@ -1,2 +1,3 @@
 Direct3D 11
 	* Added the UnorderedAccess member to BindFlags.
+	* Added the ability to create structured buffer resources.
